# rst-tools

./: .gitignore  README.md  README.rst  README.txt  pyproject.toml
rst_tools/: roughsets.py
rst_tools/models/: maximum_dependency_attributes.py  reduct.py  similarity.py  vprs.py
tests/: test_rst_tools.py
